# EngineSaidou

./: .gitignore  CMakeLists.txt  build.sh  imgui.ini
assets/shaders/: BlinnPhongShader.frag  BlinnPhongShader.vert  default_fragment_shader.frag  default_vertex_shader.vert
include/Engine/: Assets.h  AssetsManager.h  Camera.h  Color.h  Component.h  DirectionalLight.h  Engine.h  Entity.h  Event.h  EventCallback.h  InputAction.h  InputCode.h  InputMap.h  InputSystem.h  Light.h  LightingSettings.h  Material.h  Mesh.h  MeshRenderer.h  PointLight.h  Shader.h  SpotLight.h  Transform.h  Window.h  World.h
include/Game/: DirectionalLightController.h  DirectionalLightEntity.h
include/ImGUI/: imgui.h  imgui_internal.h
include/Math/: Mathf.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
include/Utilities/: Color.h  ColorEngine.h  FileSystem.h  ImGui_Test.h  Logger.h  MeshUtilities.h  ScriptEditor.h  Texture.h  TimeEngine.h  TransformationUtilities.h
include/glad/: glad.h
logs/: log.txt
src/: glad.c  main.cpp
src/Engine/: Assets.cpp  AssetsManager.cpp  Camera.cpp  Color.cpp  Component.cpp  DirectionalLight.cpp  Engine.cpp  Entity.cpp  Event.cpp  EventCallback.cpp  InputAction.cpp  InputCode.cpp  InputMap.cpp  InputSystem.cpp  Light.cpp  LightingSettings.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  PointLight.cpp  Shader.cpp  SpotLight.cpp  Transform.cpp  Window.cpp  World.cpp
src/Game/: DirectionalLightController.cpp  DirectionalLightEntity.cpp
src/ImGUI/: ImGuiFileDialog.cpp  TextEditor.cpp  imgui.cpp  imgui_draw.cpp
src/ImGUI/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/Math/: Mathf.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Utilities/: FileSystem.cpp  ImGUI_Test.cpp  Logger.cpp  MeshUtilities.cpp  ScriptEditor.cpp  Texture.cpp  TimeEngine.cpp  TransformationUtilities.cpp
